[ADD]完成员工分页功能

--- a/static/front/index.html
+++ b/static/front/index.html
@@ -568,13 +568,13 @@
             toAddOrderPage(){
               if(this.cartData.length > 0){
                 window.requestAnimationFrame(()=>{
-                  window.location.href ='/front/page/add-order.html'
+                  window.location.href ='/static/front/page/add-order.html'
                 })
               }
             },
             toUserPage(){
               window.requestAnimationFrame(()=>{
-                window.location.href= '/front/page/user.html'
+                window.location.href= '/static/front/page/user.html'
               })
             },
             async dishDetails(item){
